Fix: md-divider spacing

--- a/app/css/hesperides.css
+++ b/app/css/hesperides.css
@@ -903,3 +903,7 @@ input.default-value-color-focus:placeholder-shown{color: #FFFFFF;}
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.diff-divider {
+    padding-bottom: 15px;
+}
